# plotcpp

./: CMakeLists.txt  LICENSE.txt  README.md  example.cpp  plot_defines.h.in  plot_gnuplot.cpp  plot_gnuplot.h  plot_types.h  test.cpp
